methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:8: error: value c is not a member of object java.awt.Color
if (!estFaceMur()) {avance() ; if (getCouleurSol()==Color.c) {recule() ; return true}
                                                          ^